[metadata]
name = cert
author = Felipe Faria
author-email = felipefaria@me.com
summary = Package for interacting with TLS/SSL connections and certificates.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.5
home-page = https://github.com/synchronizing/cert
project_urls =
    Bug Tracker = https://github.com/synchronizing/cert/issues
    Documentation = https://synchronizing.github.io/cert/
    Source Code = https://github.com/synchronizing/cert/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    cert

[extras]
dev =
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx-copybutton
    sphinx-autobuild
    furo

[files]
packages =
    cert

[flake8]
max-line-length = 120
